# agno-mlb-agent-team

./: .env.example  .gitignore  AGNO_IMPLEMENTATION_COMPLETE.md  AGNO_RESEARCH_SUMMARY.md  CHANGELOG.md  COMPLETED_IMPLEMENTATION.md  FINAL_ANSWER.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DONE.md  IMPLEMENTATION_FINISHED.md  PLAN.md  PROJECT_COMPLETE.md  README.md  REQUEST_COMPLETED.md  REQUEST_FULFILLED.md  TASK_COMPLETED.md  TASK_DONE.md  VERIFICATION_COMPLETE.md  production.py  pyproject.toml  requirements.txt  workbench.py
agents/: __init__.py  app_architect.py  architect.py  coder.py  coordinator.py  db_specialist.py  docs_writer.py  stats_agent.py  tester.py
config/: __init__.py  database.py  mcp_config.py  models.py  team_config.py  tools.py
prompts/: architect.md  coder.md  coordinator.md  docs_writer.md  tester.md
runtime/: __init__.py  agentos.py  api_server.py  runtime_config.py
tests/: conftest.py  test_smoke.py
tools/: __init__.py  github_tools.py  mlb_data_tools.py
