[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agno-mlb-agent-team"
version = "0.1.0"
description = "A 12-agent AI team for MLB baseball analytics, built on the Agno framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Blaine Winslow", email = "cbwinslow@users.noreply.github.com" },
]
keywords = ["mlb", "baseball", "ai", "agents", "agno", "sabermetrics"]

dependencies = [
    "agno[os]>=1.0.0,<2.0.0",
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.25.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.0",
    "duckdb>=0.10.0",
    "qdrant-client>=1.9.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "rich>=13.0.0",
    "pybaseball>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
agno-mlb = "production:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
